@@ -4,8 +4,7 @@ Pyramid TODOs
 Nice-to-Have
 ------------
 
-- Add set_traverser configurator method and set_resource_url_generator
-  method.
+- Add set_resource_url_generator method.
 
 - Put includes in development.ini on separate lines and fix project.rst to
   tell people to comment out only the debugtoolbar include when they want to
